src/test/ui/async-await/no-async-const.stderr
error: expected one of `fn` or `unsafe`, found keyword `const`
  --> $DIR/no-async-const.rs:5:11
   |
LL | pub async const fn x() {}
   |           ^^^^^ expected one of `fn` or `unsafe` here

error: aborting due to previous error

